finalizar category e specification, iniciar users
