# src/routes/specifications.routes.ts
@@ -1,15 +1,10 @@
 import { Router } from "express";
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
 
-// specificationsRoutes.get("/", (request, response) => {
-//   const all = specificationsRepository.list();
-//   return response.json(all);
-// });
+specificationsRoutes.post("/", createSpecificationController.handle);
 
 export { specificationsRoutes };
